[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diffgap"
version = "0.1.0"
description = "Diffusion-based gap filling utilities (datasets, sampler, baselines, metrics)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Arya Chavoshi", email="chavoshiarya77@gmail.com"}]
license = {text = "MIT"}
dependencies = [
  "torch>=2.1",
  "torchmetrics>=1.3",
  "opencv-python-headless>=4.10",
  "numpy>=1.26",
  "scipy>=1.11",
  "diffusers>=0.30",
  "accelerate>=0.31",
  "typing_extensions>=4.9",
]

[tool.setuptools.packages.find]
where = ["src"]
